# container_manager

./: .gitignore  Doxyfile  README.md
App/: CMakeLists.txt  TODO.md  main.cpp
App/api/: CMakeLists.txt
App/api/inc/: dbus_consumer.hpp  http_server.hpp  message_queue_consumer.hpp  mosquitto_mqtt_subscriber.hpp  posix_message_queue_consumer.hpp
App/api/src/: dbus_consumer.cpp  http_server.cpp  message_queue_consumer.cpp  mosquitto_mqtt_subscriber.cpp  posix_message_queue_consumer.cpp
App/bl/: CMakeLists.txt
App/bl/inc/: cm_container_service_handler.hpp  cm_server_handler.hpp
App/bl/src/: cm_container_service_handler.cpp  cm_server_handler.cpp
App/common/: CMakeLists.txt
App/common/inc/: cm_common.hpp  cm_database_handler.hpp  cm_redis_database_handler.hpp
App/common/src/: cm_database_handler.cpp  cm_redis_database_handler.cpp  cm_threadpool.cpp
App/communication/: CMakeLists.txt
App/communication/inc/: cm_http_server_handler.hpp
App/communication/src/: cm_http_server_handler.cpp
App/core/: CMakeLists.txt
App/core/inc/: container_service.hpp
App/core/src/: container_service.cpp
App/database/: CMakeLists.txt
App/database/inc/: database_interface.hpp  embedded_database.hpp  redis_database.hpp
App/database/src/: embedded_database.cpp  redis_database.cpp
App/dataprocessing/: CMakeLists.txt
App/dataprocessing/inc/: cm_json_requestexecutor_handler.hpp  cm_requestexecutor.hpp
App/dataprocessing/src/: cm_json_requestexecutor_handler.cpp
App/executor/: CMakeLists.txt
App/executor/inc/: container_request.hpp  json_request_executor.hpp  protobuf_request_executor.hpp  request_executor.hpp
App/executor/proto/: container_manager.proto
App/executor/src/: json_request_executor.cpp  protobuf_request_executor.cpp
App/runtime/: CMakeLists.txt
App/runtime/inc/: cm_command_factory.hpp  cm_commands.hpp  cm_docker_api_commands.hpp  cm_docker_commands.hpp  cm_podman_api_commands.hpp  cm_podman_commands.hpp  command_factory.hpp  commands.hpp  docker_api_commands.hpp  docker_commands.hpp  podman_api_commands.hpp  podman_commands.hpp
App/runtime/src/: cm_command_factory.cpp  cm_docker_api_commands.cpp  cm_docker_commands.cpp  cm_podman_api_commands.cpp  cm_podman_commands.cpp  command_factory.cpp  docker_api_commands.cpp  docker_commands.cpp  podman_api_commands.cpp  podman_commands.cpp
App/security/: CMakeLists.txt
App/security/inc/: aes_gcm_decrypt.hpp  aes_gcm_security_provider.hpp  chacha20_security_provider.hpp  null_security_provider.hpp  security_provider.hpp
App/security/src/: aes_gcm_decrypt.cpp  aes_gcm_security_provider.cpp  chacha20_security_provider.cpp  null_security_provider.cpp
App/unitTest/: CMakeLists.txt  container_service_test.cpp
App/utils/: CMakeLists.txt
App/utils/inc/: common.hpp  curl_handler.hpp  init_handler.hpp  logging.hpp  status.hpp  threadpool.hpp
App/utils/src/: aes_gcm_decrypt.cpp  curl_handler.cpp  init_handler.cpp  threadpool.cpp
App1/: main.cpp
App1/api/: CMakeLists.txt
App1/api/inc/: http_server.hpp
App1/api/src/: http_server.cpp
App1/core/inc/: container_service.hpp
App1/core/src/: container_service.cpp
App1/database/inc/: cm_init_handler.hpp  threadpool.hpp
App1/database/src/: threadpool.cpp
App1/executor/inc/: container_request.hpp  json_request_executor.hpp  request_executor.hpp
App1/runtime/inc/: docker_api_commands.hpp  podman_api_commands.hpp  podman_commands.hpp
App1/runtime/src/: command_factory.cpp  docker_commands.cpp  podman_api_commands.cpp  podman_commands.cpp
docs/: CODING_STANDARDS.md  TODO.md  architecture.md
docs/architecture/: architecture.md  architecture_diagram.md
docs/doxygen/html/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  aes__gcm__decrypt_8cpp.html  aes__gcm__decrypt_8cpp.js  aes__gcm__decrypt_8cpp__incl.map  aes__gcm__decrypt_8cpp__incl.md5  aes__gcm__decrypt_8cpp_aafa6ad411734eeb8c3783999c926ac2b_cgraph.map  aes__gcm__decrypt_8cpp_aafa6ad411734eeb8c3783999c926ac2b_cgraph.md5  aes__gcm__decrypt_8cpp_aafa6ad411734eeb8c3783999c926ac2b_icgraph.map  aes__gcm__decrypt_8cpp_aafa6ad411734eeb8c3783999c926ac2b_icgraph.md5  aes__gcm__decrypt_8cpp_ac3bd08c44501a45d3a1e0129b7b3b046_icgraph.map  aes__gcm__decrypt_8cpp_ac3bd08c44501a45d3a1e0129b7b3b046_icgraph.md5  aes__gcm__decrypt_8cpp_adac74448236ae767b76ec9f551cee9e2_icgraph.map  aes__gcm__decrypt_8cpp_adac74448236ae767b76ec9f551cee9e2_icgraph.md5  aes__gcm__decrypt_8cpp_source.html  aes__gcm__decrypt_8hpp.html  aes__gcm__decrypt_8hpp.js  aes__gcm__decrypt_8hpp__dep__incl.map  aes__gcm__decrypt_8hpp__dep__incl.md5  aes__gcm__decrypt_8hpp__incl.map  aes__gcm__decrypt_8hpp__incl.md5  aes__gcm__decrypt_8hpp_aafa6ad411734eeb8c3783999c926ac2b_cgraph.map  aes__gcm__decrypt_8hpp_aafa6ad411734eeb8c3783999c926ac2b_cgraph.md5  aes__gcm__decrypt_8hpp_aafa6ad411734eeb8c3783999c926ac2b_icgraph.map  aes__gcm__decrypt_8hpp_aafa6ad411734eeb8c3783999c926ac2b_icgraph.md5  aes__gcm__decrypt_8hpp_adac74448236ae767b76ec9f551cee9e2_icgraph.md5  aes__gcm__decrypt_8hpp_source.html  aes__gcm__security__provider_8cpp.html  aes__gcm__security__provider_8cpp__incl.map  aes__gcm__security__provider_8cpp__incl.md5  aes__gcm__security__provider_8cpp_source.html  aes__gcm__security__provider_8hpp.html  aes__gcm__security__provider_8hpp__dep__incl.map  aes__gcm__security__provider_8hpp__dep__incl.md5  aes__gcm__security__provider_8hpp__incl.map  aes__gcm__security__provider_8hpp__incl.md5  aes__gcm__security__provider_8hpp_source.html  annotated.html  annotated_dup.js  (+1421 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+84 more)
ui/: container_creator.py  container_creator_app.py  container_creator_logic.py  container_creator_ui.py  container_manager_pb2.py  container_manager_pb2_grpc.py  server.py
